vlib/v/checker/tests/struct_field_thread_incomplete_type_err.vv
struct Str {
	t thread
	a [0xF]bool
}
